--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 SECRET_KEY=dev-secret-key
 DEBUG=True
 ALLOWED_HOSTS=127.0.0.1,.herokuapp.com
-DATABASE_URL=mysql://root:1234@localhost:3306/airkpi
-
+#DATABASE_URL=mysql://root:1234@localhost:3306/airkpi
+DATABASE_URL=mysql://root:GJzQeazywkFllSXxGfUfzAGTWsUbwoJA@maglev.proxy.rlwy.net:21871/railway
 EMAIL_HOST_USER=testwebservice71@gmail.com
 EMAIL_HOST_PASSWORD=akuu vulg ejlg ysbt
